Add resource manager to make code related to loading assets cleaner
Signed-off-by: JACPro <48246716+JACPro@users.noreply.github.com>

--- a/Tetris_SFML.vcxproj.filters
+++ b/Tetris_SFML.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="KeyHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ResourceManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KeyHandler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
