--- a/Tetris_SFML.vcxproj
+++ b/Tetris_SFML.vcxproj
@@ -137,9 +137,11 @@
   <ItemGroup>
     <ClCompile Include="KeyHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KeyHandler.hpp" />
+    <ClInclude Include="ResourceManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
