--- a/Tetris_SFML.vcxproj
+++ b/Tetris_SFML.vcxproj
@@ -135,13 +135,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CONSTANTS_ScreenLayout.hpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="KeyHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CONSTANTS_Gameplay.hpp" />
+    <ClInclude Include="Entity.hpp" />
     <ClInclude Include="KeyHandler.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
+    <ClInclude Include="Window.hpp" />
+    <ClInclude Include="World.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
