--- a/Tetris_SFML.vcxproj
+++ b/Tetris_SFML.vcxproj
@@ -137,10 +137,14 @@
   <ItemGroup>
     <ClCompile Include="CONSTANTS_ScreenLayout.hpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GameScreen.cpp" />
+    <ClCompile Include="GameScreen.hpp" />
     <ClCompile Include="KeyHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="ScoreManager.cpp" />
+    <ClCompile Include="Screen.hpp" />
+    <ClCompile Include="ScreenFactory.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -152,6 +156,7 @@
     <ClInclude Include="Observer.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
     <ClInclude Include="ScoreManager.hpp" />
+    <ClInclude Include="ScreenFactory.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="World.hpp" />
   </ItemGroup>
