Update keyhandler to support separate events for press, hold, and release
- also further naming improvements:
  - more missing m prefixes on properties
  - functions starting with lower case now start upper
  - Check function renamed for clarity

Signed-off-by: JACPro <48246716+JACPro@users.noreply.github.com>

--- a/Tetris_SFML.vcxproj
+++ b/Tetris_SFML.vcxproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CONSTANTS_Gameplay.hpp" />
+    <ClInclude Include="EKeyboardEvents.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="EScreens.hpp" />
     <ClInclude Include="GameOverScreen.hpp" />
